--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
     <!-- AUDIO -->
     <audio id="bg-music" loop>
-        <source src="https://assets.mixkit.co/music/preview/mixkit-tech-house-vibes-130.mp3" type="audio/mpeg">
+        <source src="img/song.mp3" type="audio/mpeg">
     </audio>
 
     <button id="music-control" onclick="toggleMusic()" title="Putar Musik">
@@ -787,3 +787,4 @@
     </script>
 </body>
 </html>
+
