--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
     <!-- AUDIO -->
     <audio id="bg-music" loop>
-        <source src="img/song.mp3" type="audio/mpeg">
+        <source src="img\song.mp3" type="audio/mpeg">
     </audio>
 
     <button id="music-control" onclick="toggleMusic()" title="Putar Musik">
@@ -787,4 +787,3 @@
     </script>
 </body>
 </html>
-
