Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -526,11 +526,11 @@
 
                     <!-- TOMBOL RESET DATA (HANYA UNTUK TESTING) -->
                     <!-- Hapus bagian ini jika sudah siap disebar -->
-                    <div class="text-center mt-4">
+                    <!-- <div class="text-center mt-4">
                         <button onclick="resetWishes()" class="text-xs text-red-500 underline hover:text-red-700 opacity-50 hover:opacity-100 transition-opacity">
                             [Testing] Hapus Semua Data
                         </button>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             
@@ -933,4 +933,5 @@
     </script>
 </body>
 </html>
+
 
